[package]
name = "rinhac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
current_platform = "0.2.0"
enum-map = "2.6.3"
enumflags2 = "0.7.8"
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.106"
